--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -99,14 +99,24 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.side-catalog .catalog-body .h1_nav,
-.side-catalog .catalog-body .h2_nav,
-.side-catalog .catalog-body .h3_nav {
+.side-catalog .catalog-body .h1_nav {
   margin-left: 0;
+  padding-left: 0;
   font-size: 13px;
   font-weight: bold;
 }
-.side-catalog .catalog-body .h4_nav,
+.side-catalog .catalog-body .h2_nav {
+  margin-left: 0;
+  padding-left: 12px;
+  font-size: 13px;
+  font-weight: bold;
+}
+.side-catalog .catalog-body .h3_nav {
+  margin-left: 0;
+  padding-left: 24px;
+  font-size: 13px;
+  font-weight: bold;
+}
 .side-catalog .catalog-body .h5_nav,
 .side-catalog .catalog-body .h6_nav {
   margin-left: 10px;
